AUTOMAKE_OPTIONS=foreign
SUBDIRS = src/ccl src/mqtt src/cjson src/wangyonglin app
bindir =    $(prefix)/bin
libdir =    $(prefix)/lib
logsdir =    $(prefix)/logs
logs_DATA = $(top_srcdir)/logs/error.log  $(top_srcdir)/logs/access.log 
confdir =   $(prefix)/conf
conf_DATA = $(top_srcdir)/conf/example.conf
datadir=    $(prefix)/share
sysconfdir= $(prefix)/etc
includedir= $(prefix)/include

